feat: bybit, bitget, binance
